4.0.127
- Fixed problem with Heading custom field in combination with event resources panel.
- Account selectbox on IMAP mailbox sharing now loads the accounts better.
- Updated Swedish, Dutch and German translation
- Use spam icon for INBOX.Spam too
- Fixed problem with resources when $config['calendar_category_required'] is set to true
- Don't cache autoload classes because it caused cache slam and it doesn't have a performance impact.
- E-mail account sorting was no longer possible

12-11-2012 4.0.126
- Added option to disable "Read more" links in the comments
- Changed display of tasks in the startpage, now only showing active tasks instead of active and upcoming.
- Added config option for comment category selection to be required. This can be managed by the server admin in the config.php file ($config['comments_category_required'] = true;).
- Added config option for the calendar's event category selection to be required. This can be managed by the server admin in the config.php file ($config['calendar_category_required'] = true;).
- Session not entirely cleared when switching user
- VTIMEZONE export was incorrect.
- VTIMEZONE fix in .125 broke caldav, calendar export and calendar invitations!

09-11-2012 4.0.125
- VTIMEZONE export was incorrect
- Root folders with subfolders still showed even when unsubscribed
- Security issue fixed that could only be exploited by a logged on user.
- Enable debug mode with CTRL+F7
- Added possibility to add the customfields of a user to an email template like {user:col_**}
- Added "Delete all items" buttons to tasklist, calendar and addressbook administration dialog
- Create folder on root level of e-mail tree

07-11-2012 4.0.124
- E-mail Inbox and account nodes expanded by default again
- Remember attachments when switching e-mail template
- Added some more options to e-mail account context menu
- Add senders to addresslist displayed addresslists twice sometimes
- Updated Norwegian translation